# hospitaladmin

./: .gitignore  HMS_REVIEW.md  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml
openspec/: config.yaml  project.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_security.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: commands.rs  guards.rs  mod.rs  session.rs
src-tauri/src/commands/: admissions.rs  appointments.rs  beds.rs  billing.rs  billing_write.rs  dashboard.rs  database.rs  doctors.rs  lab.rs  lab_orders.rs  mod.rs  patients.rs  pharmacy.rs  prescriptions.rs  reports.rs  staff.rs
src-tauri/src/db/: mod.rs  seed.rs
src-tauri/src/models/: appointment.rs  bed.rs  billing.rs  dashboard.rs  lab.rs  medication.rs  mod.rs  patient.rs  staff.rs
src-tauri/src/utils/: audit.rs  id.rs  mod.rs
src/lib/lib/: api.ts  types.ts  validation.ts
src/lib/stores/: auth.ts  notifications.ts  sidebar.ts
src/lib/utils/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/appointments/: +page.svelte
src/routes/billing/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/lab/: +page.svelte
src/routes/login/: +page.svelte
src/routes/patients/: +page.svelte
src/routes/pharmacy/: +page.svelte
src/routes/reports/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/staff/: +page.svelte
(+59 files in other folders)
